# vidyabot

./: .gitignore  CHANGELOG.md  CONVENTIONAL_COMMIT.md  DEVELOPMENT.md  FUTURE_IMPROVEMENTS.md  README.md  __init__.py  config.yaml  log_config.py  pyproject.toml  release.py  setup.cfg
api/: __init__.py
api/docs/: dev_guide.md
api/src/: main.py
api/src/cli/: hello_world.py
api/src/data/: user_data.py
api/src/langchain/: langchain_service.py
api/static_data/: user_data.json
api/tests/: test_gemini_integration.py  test_hello_world.py  test_langchain_service.py  test_main.py  test_user_data.py
docs/: future_improvements.md
scripts/: check.py  manage_server.py  release_tools.py  run_server.py  start_server.py  start_server.sh  test_langchain_service_script.py
