[tool.poetry]
name = "vidyabot"
version = "0.1.0"
description = "An AI-powered knowledge assistant combining ancient wisdom with modern technology"
authors = ["Matthew Pazaryna <mpazbot@gmail.com>"]
readme = "README.md"
packages = [{include = "vidyabot"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.3.0"
langchain = "^0.1.0"
groq = "^0.4.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
python-semantic-release = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=vidyabot"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.semantic_release]
version_variable = ["vidyabot/__init__.py:__version__"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
