[tool.poetry]
name = "vidyabot"
version = "0.0.0"
description = "An AI-powered knowledge assistant combining ancient wisdom with modern technology"
authors = ["Matthew Pazaryna <mpazbot@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.3.0"
langchain = "^0.1.0"
groq = "^0.4.0"
httpx = "^0.25.0"
click = "^8.1.3"
fastapi = "^0.109.0"
uvicorn = "^0.15.0"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
python-semantic-release = "^8.3.0"
poetry-dynamic-versioning = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
testpaths = ["api/tests"]
addopts = "--cov=api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.semantic_release]
version_variable = ["api/__init__.py:__version__"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
repository_url = "https://github.com/mpazaryna/vidyabot.git"

[tool.poetry.scripts]
check = "scripts.check:main"
start-server = "scripts.start_server:main"
start-server-prod = "scripts.start_server:main --env prod"